--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
     <body>
         <div class="grid--container">
             <div class="card daniel">
+                <img
+                    class="bg-img"
+                    src="images/bg-pattern-quotation.svg"
+                    alt=""
+                />
                 <div class="author--wrap">
                     <img src="images/image-daniel.jpg" alt="" />
                     <div class="author-info--wrap">
