forgot to add border around profile pics

--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
                     alt=""
                 />
                 <div class="author--wrap">
-                    <img src="images/image-daniel.jpg" alt="" />
+                    <img
+                        class="profile-pic"
+                        src="images/image-daniel.jpg"
+                        alt=""
+                    />
                     <div class="author-info--wrap">
                         <h3 class="name">Daniel Clifford</h3>
                         <small class="verified">Verified Graduate</small>
@@ -62,7 +66,11 @@
             </div>
             <div class="card jonathan">
                 <div class="author--wrap">
-                    <img src="images/image-jonathan.jpg" alt="" />
+                    <img
+                        class="profile-pic"
+                        src="images/image-jonathan.jpg"
+                        alt=""
+                    />
                     <div class="author-info--wrap">
                         <h3 class="name">Jonathan Walters</h3>
                         <small class="verified">Verified Graduate</small>
@@ -79,7 +87,11 @@
             </div>
             <div class="card jeanette">
                 <div class="author--wrap">
-                    <img src="images/image-jeanette.jpg" alt="" />
+                    <img
+                        class="profile-pic"
+                        src="images/image-jeanette.jpg"
+                        alt=""
+                    />
                     <div class="author-info--wrap">
                         <h3 class="name">Jeanette Harmon</h3>
                         <small class="verified">Verified Graduate</small>
@@ -96,7 +108,11 @@
             </div>
             <div class="card patrick">
                 <div class="author--wrap">
-                    <img src="images/image-patrick.jpg" alt="" />
+                    <img
+                        class="profile-pic"
+                        src="images/image-patrick.jpg"
+                        alt=""
+                    />
                     <div class="author-info--wrap">
                         <h3 class="name">Patrick Abrams</h3>
                         <small class="verified">Verified Graduate</small>
@@ -118,7 +134,11 @@
             </div>
             <div class="card kira">
                 <div class="author--wrap">
-                    <img src="images/image-kira.jpg" alt="" />
+                    <img
+                        class="profile-pic"
+                        src="images/image-kira.jpg"
+                        alt=""
+                    />
                     <div class="author-info--wrap">
                         <h3 class="name">Kira Whittle</h3>
                         <small class="verified">Verified Graduate</small>
